crates/reinhardt-urls/crates/routers-macros/tests/ui/path_must_start_with_slash.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: path must start with '/'
	let _path = path!("users/");
}
